--- a/index.html
+++ b/index.html
@@ -44,15 +44,10 @@
 </head>
 <body>
     <h1>Revelação em...</h1>
-    <div class="timer" id="timer"></div>
-    <audio id="background-audio" autoplay loop>
-        <source src="suspense.mp4" type="audio/mp4">
-        O seu navegador não suporta o elemento de áudio.
-    </audio>
-
-    <footer>
-        &copy; 2024 - Contagem Decrescente Interativa
-    </footer>
+<video id="background-audio" autoplay loop muted playsinline>
+    <source src="suspense.mp4" type="video/mp4">
+    O seu navegador não suporta o elemento de vídeo.
+</video>
 
     <script>
         // Inicializa o áudio no carregamento da página
