--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 </head>
 <body>
     <h1>Revelação em...</h1>
-<video id="background-audio" autoplay loop muted playsinline>
-    <source src="suspense.mp4" type="video/mp4">
-    O seu navegador não suporta o elemento de vídeo.
-</video>
+<audio autoplay loop>
+        <source src="suspense.mp4" type="audio/mp4">
+        O seu navegador não suporta o elemento de áudio.
+    </audio>
 
     <script>
         // Inicializa o áudio no carregamento da página
