--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
 </head>
 <body>
     <h1>Revelação em...</h1>
+    <div class="timer" id="timer"></div>
 <audio autoplay loop>
-        <source src="suspense.mp4" type="audio/mp4">
+        <source src="suspense.mp3" type="audio/mpeg">
         O seu navegador não suporta o elemento de áudio.
     </audio>
 
-    <script>
+<script>
         // Inicializa o áudio no carregamento da página
         const audio = document.getElementById('background-audio');
         audio.volume = 0.5; // Ajusta o volume, se necessário
@@ -79,3 +80,4 @@
     </script>
 </body>
 </html>
+
