--- a/5dias.html
+++ b/5dias.html
@@ -72,7 +72,7 @@
 
     <!-- Contêiner do vídeo -->
     <div id="videoContainer" class="video-container">
-        <iframe id="youtubeVideo" src="https://www.youtube.com/embed/Lu2mOCKMuxI?autoplay=1&mute=1" frameborder="0" allow="autoplay; fullscreen"></iframe>
+        <iframe id="youtubeVideo" src="https://www.youtube.com/embed/Lu2mOCKMuxI?autoplay=1" frameborder="0" allow="autoplay; fullscreen"></iframe>
     </div>
 
     <script>
