--- a/5dias.html
+++ b/5dias.html
@@ -52,10 +52,9 @@
             width: 100vw;
             height: 100vh;
             background-color: rgba(0, 0, 0, 0.8);
-            display: flex;
+            display: none;
             justify-content: center;
             align-items: center;
-            display: none;
         }
 
         iframe {
@@ -85,11 +84,10 @@
 </head>
 <body>
     <h1>Revelação em...</h1>
-    <h2>Get ready for the surprise... merry xmas</h2>
     <div class="timer" id="timer">Calculando...</div>
 
     <!-- Mensagem de erro -->
-    <div id="errorContainer" class="error-message hide-error">
+    <div id="errorContainer" class="error-message">
         ERRO - NÃO AUTORIZADO
     </div>
 
