--- a/index.html
+++ b/index.html
@@ -61,18 +61,21 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.9);
             color: white;
             font-size: 3rem;
             display: flex;
             justify-content: center;
             align-items: center;
             opacity: 0;
+            z-index: 9999;
             transition: opacity 0.5s ease-in-out;
+            pointer-events: none;
         }
 
         .show-message {
             opacity: 1;
+            pointer-events: auto;
         }
 
         /* Efeito de luz piscando mais rápido */
@@ -83,7 +86,7 @@
             width: 100%;
             height: 100%;
             background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 15%, rgba(0, 0, 0, 0.7) 60%);
-            animation: blink 0.5s infinite alternate; /* Alterado para piscar mais rápido */
+            animation: blink 0.5s infinite alternate;
             z-index: 1;
         }
 
@@ -141,7 +144,7 @@
 
     <!-- Div da mensagem em tela cheia -->
     <div id="message" class="full-screen-message">
-        <p>5 dias? Está quase</p>
+        <p>6 dias? Está quase</p>
     </div>
 
     <!-- Emojis de Pai Natal voando -->
@@ -174,20 +177,19 @@
 
             // Verifica se faltam 5 dias para o evento
             if (days === 5) {
-                // Exibe a mensagem em tela cheia
                 const message = document.getElementById('message');
                 message.classList.add('show-message');
 
                 // Após 3 segundos, redireciona para a página
                 setTimeout(function() {
                     window.location.href = "5dias.html";
-                }, 3000); // 3000ms = 3 segundos
+                }, 3000);
             }
         }
 
         // Remove a animação de luzes após 3 segundos
         setTimeout(function() {
-            document.getElementById('lights').style.animation = 'none'; // Remove a animação
+            document.getElementById('lights').style.animation = 'none';
         }, 3000);
 
         const interval = setInterval(updateCountdown, 1);
