--- a/index.html
+++ b/index.html
@@ -24,13 +24,6 @@
         h1 {
             font-size: 3rem;
             margin-bottom: 20px;
-            z-index: 2;
-        }
-
-        h2 {
-            font-size: 1.5rem;
-            margin-bottom: 40px;
-            z-index: 2;
         }
 
         .timer {
@@ -40,118 +33,40 @@
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            z-index: 2;
         }
 
-        footer {
-            position: absolute;
-            bottom: 10px;
-            font-size: 0.8rem;
-            opacity: 0.8;
-        }
-
-        .audio-container {
-            display: none; /* Esconder o vídeo de fundo */
-        }
-
-        /* Estilo da mensagem em tela cheia */
+        /* Mensagem em tela cheia */
         .full-screen-message {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
-            color: white;
+            background-color: rgba(0, 0, 0, 0.9); /* Fundo escuro */
+            color: #ff6666; /* Vermelho para a mensagem */
             font-size: 3rem;
             display: flex;
             justify-content: center;
             align-items: center;
-            opacity: 0;
             z-index: 9999;
-            transition: opacity 0.5s ease-in-out;
+            text-align: center;
+            opacity: 0;
             pointer-events: none;
+            transition: opacity 0.5s ease-in-out;
         }
 
         .show-message {
             opacity: 1;
             pointer-events: auto;
         }
-
-        /* Efeito de luz piscando mais rápido */
-        .lights {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 15%, rgba(0, 0, 0, 0.7) 60%);
-            animation: blink 0.5s infinite alternate;
-            z-index: 1;
-        }
-
-        /* Animação para simular as luzes piscando rapidamente */
-        @keyframes blink {
-            0% {
-                background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 15%, rgba(0, 0, 0, 0.7) 60%);
-            }
-            50% {
-                background: radial-gradient(circle, rgba(255, 255, 255, 0.7) 15%, rgba(0, 0, 0, 0.5) 60%);
-            }
-            100% {
-                background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 15%, rgba(0, 0, 0, 0.7) 60%);
-            }
-        }
-
-        /* Emojis de Pai Natal voando */
-        .santa-emoji {
-            position: absolute;
-            font-size: 3rem;
-            animation: fly 10s linear infinite;
-            z-index: 3;
-        }
-
-        /* Animação de voo lento dos emojis */
-        @keyframes fly {
-            0% {
-                top: -5%;
-                left: 100%;
-                opacity: 1;
-            }
-            50% {
-                top: 50%;
-                left: 50%;
-                opacity: 0.8;
-            }
-            100% {
-                top: 110%;
-                left: -20%;
-                opacity: 1;
-            }
-        }
     </style>
 </head>
 <body>
-    <!-- Luz piscando no fundo -->
-    <div class="lights" id="lights"></div>
-
     <h1>Revelação em...</h1>
-    <h2>Get ready for the surprise... merry xmas</h2>
-    <div class="timer" id="timer"></div>
-    <div class="audio-container">
-        <iframe width="0" height="0" src="https://www.youtube.com/embed/_HCCTVGlTOg?autoplay=1&loop=1" frameborder="0" allow="autoplay"></iframe>
-    </div>
+    <div class="timer" id="timer">Calculando...</div>
 
-    <!-- Div da mensagem em tela cheia -->
-    <div id="message" class="full-screen-message">
-        <p>6 dias? Está quase</p>
-    </div>
-
-    <!-- Emojis de Pai Natal voando -->
-    <div class="santa-emoji" style="animation-delay: 0s;">🎅</div>
-    <div class="santa-emoji" style="animation-delay: 3s;">🎅</div>
-    <div class="santa-emoji" style="animation-delay: 6s;">🎅</div>
-    <div class="santa-emoji" style="animation-delay: 9s;">🎅</div>
+    <!-- Div para a mensagem em tela cheia -->
+    <div id="fullScreenMessage" class="full-screen-message"></div>
 
     <script>
         function updateCountdown() {
@@ -169,30 +84,29 @@
             const hours = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
             const minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
             const seconds = Math.floor((diff % (1000 * 60)) / 1000);
-            const milliseconds = Math.floor((diff % 1000));
 
-            // Atualiza o timer na tela
+            // Atualiza o timer
             document.getElementById('timer').innerText = 
-                `${days} dias, ${hours} horas, ${minutes} minutos, ${seconds}.${milliseconds} segundos`;
+                `${days} dias, ${hours} horas, ${minutes} minutos, ${seconds} segundos`;
 
-            // Verifica se faltam 5 dias para o evento
+            // Exibir mensagem e redirecionar com base nos dias restantes
             if (days === 5) {
-                const message = document.getElementById('message');
-                message.classList.add('show-message');
-
-                // Após 3 segundos, redireciona para a página
-                setTimeout(function() {
-                    window.location.href = "6dias.html";
-                }, 3000);
+                showMessageAndRedirect("5 dias... está quase...", "6dias.html");
+            } else if (days === 4) {
+                showMessageAndRedirect("4 dias... está quase...", "5dias.html");
             }
         }
 
-        // Remove a animação de luzes após 3 segundos
-        setTimeout(function() {
-            document.getElementById('lights').style.animation = 'none';
-        }, 3000);
+        function showMessageAndRedirect(messageText, redirectUrl) {
+            const messageElement = document.getElementById('fullScreenMessage');
+            messageElement.innerText = messageText; // Define o texto da mensagem
+            messageElement.classList.add('show-message'); // Mostra a mensagem ocupando o ecrã todo
+            setTimeout(() => {
+                window.location.href = redirectUrl; // Redireciona após 3 segundos
+            }, 3000);
+        }
 
-        const interval = setInterval(updateCountdown, 1);
+        const interval = setInterval(updateCountdown, 1000);
     </script>
 </body>
 </html>
